# N-Queens-CW2

./: CMakeLists.txt  nqueens-cuda.cu  nqueens-openmp.cpp  nqueensNonRec.cpp  nqueensSerialNonRecursive.cpp  nqueensSerialOriginal.cpp
Report/: CW2 Report - Michael Suttie.docx  ~$2 Report - Michael Suttie.docx
Results/: Parallel - CUDA.xlsx  Parallel - OpenMP Scheduling.xlsx  Parallel - OpenMP.xlsx  Serial.xlsx  schedulingResults.txt  ~$Serial.xlsx
